# FantasyGameConsole

ProjectFantasyGameConsole/: .gitignore  CMakeLists.txt  EXPORT_for_win.bat  TESTING_copy_dlls.bat  readme.md
ProjectFantasyGameConsole/engine/: AudioEngine.cpp  CMakeLists.txt  Engine.cpp  FileManagement.cpp  FileManager.cpp  FontEngine.cpp  InputEngine.cpp  JobManagement.cpp  ScoreManagement.cpp  WindowManager.cpp  _FantasyGameEngine.hpp  main.cpp  rendering.cpp  test.cpp
ProjectFantasyGameConsole/engine/GameEngine/: Engine.cpp  GameObject.cpp  ImageObject.cpp  ImageObject.h  Renderer.cpp  Vec.cpp  Window.cpp  WindowManager.cpp  _GameObject.h  _ImageObject.h  _Renderer.h  _Vec.h  _Window.h
ProjectFantasyGameConsole/engine/GameEngine/include/: Engine.h  GameObject.h  ImageObject.h  Renderer.h  Vec.h  WindowManager.h
ProjectFantasyGameConsole/engine/GameEngineClasses/: Audio.cpp  Audio.h  AudioEngine.cpp  FontEngine.cpp  InputEngine.cpp  InputEngine.h  SDLMixerSoundEngine.cpp  SDLMixerSoundEngine.h
ProjectFantasyGameConsole/engine/GameEngineClasses/include/: AudioEngine.h  FontEngine.h  Renderer.h
ProjectFantasyGameConsole/engine/include/: AudioEngine.h  Engine.h  FontEngine.h  GameObject.h  InputEngine.h  WindowManager.h
ProjectFantasyGameConsole/engine/include/FGE/: Engine.h  GameObject.h  ImageObject.h  Renderer.h  Window.h  core.h
ProjectFantasyGameConsole/engine/include/FantasyGameEngine/: FantasyGameEngine.hpp  JobManagement.hpp
ProjectFantasyGameConsole/export/assets/scripts/: test.lua  test_error.lua
ProjectFantasyGameConsole/external_deps/: CMakeLists.txt
ProjectFantasyGameConsole/external_deps/RmlUi-5.1/: CMakeLists.txt
ProjectFantasyGameConsole/external_deps/freetype/: FreeTypeConfig.cmake
ProjectFantasyGameConsole/external_deps/imgui-1.89.5/: CMakeLists.txt
ProjectFantasyGameConsole/external_deps/lua/: CMakeLists.txt
ProjectFantasyGameConsole/external_deps/lua/src/: CMakeLists.txt
ProjectFantasyGameConsole/external_deps/sdl2/: SDL2Config.cmake
ProjectFantasyGameConsole/external_deps/sol2/include/sol/: config.hpp  forward.hpp  sol.hpp
ProjectFantasyGameConsole/external_deps/sqlite-amalgamation-3400000/: CMakeLists.txt
ProjectFantasyGameConsole/game/: CMakeLists.txt  main.cpp
ProjectFantasyGameConsole/src/: AudioManager.cpp  CMakeLists.txt  CollisionDetection.hpp  FGEState.cpp  FantasyGameEngine.hpp  FileManagement.hpp  JobManagement.cpp  MutEX.cpp  MutEX.h  ScoreManagement.hpp  TetrisGame.cpp  TetrisGame.h  TetrisTest.cpp  Tetromino.cpp  Tetromino.h  constants.h  main.cpp  prototype.cpp  rendering.cpp  resource.h  test.cpp
ProjectFantasyGameConsole/testing/: CMakeLists.txt  test.cpp
SDL Project/: readme.txt
SDL Project/SdlWindow/: Audio.h  Card.cpp  Card.h  DEBUGGER.cpp  DEBUGGER.h  KeyboardController.cpp  KeyboardController.h  MainMenu.cpp  MainMenu.h  MemoryGrid.cpp  MemoryGrid.h  Player.cpp  Player.h  Scoreboard.cpp  Scoreboard.h  SdlWindow.sln  SdlWindow.vcxproj  SdlWindow.vcxproj.filters  Timer.h  WindowManager.cpp  WindowManager.h  button.cpp  button.h  globals.h  main.cpp
SDL Project/UnitTest/: UnitTest.cpp  UnitTest.vcxproj
sqlite-test/: CMakeLists.txt
sqlite-test/dep/sqlite-amalgamation-3400000/: CMakeLists.txt
sqlite-test/src/: main.cpp
